feat: Add timestamp support in ConceptMetadataModelMapper
- Update `ConceptMetadataModelMapper` to include `is_timestamp` metadata
  when applicable.
- Make `fromColumnMeta` return a list of `ConceptMetadataModel` instances.
- Modify related classes to handle multiple metadata models.
- Update tests for `ConceptMetadataModelMapper` and `ColumnMetaMapper`
  to validate new behavior.
- Extend `ColumnMeta` class with a `timestamp` field for better handling.
- Refactor `ConceptNode` to support multiple metadata models.

Signed-off-by: TDeSain <thomas.n.desain@gmail.com>